phonebook-helm-chart/templates/result_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deploy
  labels:
    name: result-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: result-app-pod
  template:
    metadata:
      name: result-app-pod
      labels:
        name: result-app-pod
    spec:
      containers:
        - name: result-app
          image: jupiterisland/resultserver:v1
          ports:
          - containerPort: 80
